Added Doomfist Jpeg

--- a/ProjectOne.html
+++ b/ProjectOne.html
@@ -1,3 +1,14 @@
-<h1>Heading</h1>
-<p>Paragaph Element</p>
-<a href="https://google.com" target="_blank" title="Google Shortcut">Link</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test Page</title> 
+</head>
+<body>
+	<h1>Heading</h1>
+	<p><b>Paragaph Element</b></p>
+	<a href="https://google.com" target="_blank" title="Google Shortcut">Link</a>
+	<p> This is:<br>
+	Doomfist</p>
+	<img src="img/Doomfist.jpeg">
+</body>
+</html>
