--- a/ProjectOne.html
+++ b/ProjectOne.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test Page</title> 
+	<title>Doomfist Web Page</title> 
 </head>
 <body>
-	<h1>Heading</h1>
-	<p><b>Paragaph Element</b></p>
+	<h1>Doomfist</h1>
+	<p><b>Who Is He?</b></p>
 	<a href="https://google.com" target="_blank" title="Google Shortcut">Link</a>
 	<p> This is:<br>
 	Doomfist</p>
